# Fast-NR

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
src/: Fast-NR.py  FastNR.py  param.py  statis.py
