[metadata]
name = Fast_NR
version = 1.0.0
license = MIT License
description = Negative regulatory element detector
long_description = file: README.md
author = Na He, et al
author_email = 11849492@mail.sustech.edu.cn
classifiers=
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
	License :: OSI Approved :: MIT License
[options]
packages = Fast_NR:
package_dir =
    Fast_NR=Fast_NR
include_package_data = True
install_requires =
   numpy
   scipy
   pysam

[options.packages.find]
where=src

