[metadata]
name = FastNR
version = 1.0.0
license = MIT License
description = Negative regulatory element detector
long_description = file: README.md
author = Na He, et al
author_email = 11849492@mail.sustech.edu.cn
classifiers=
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
	License :: OSI Approved :: MIT License
[options]
packages = FastNR:
package_dir =
    FastNR=FastNR
include_package_data = True
install_requires =
   numpy
   scipy
   pysam

[options.packages.find]
where=src

